kubernetes/istio/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: sectest-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    #  - port:
    #      number: 80
    #      name: http
    #      protocol: HTTP
    #    hosts:
    #    - "frontend.miyoshi.local"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE #enables HTTPS on this port
        serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
        privateKey: /etc/istio/ingressgateway-certs/tls.key
      hosts:
        - "*"
