kubernetes/istio/admin-api-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: admin-api-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: admin-api
spec:
  hosts:
  - "*"
  gateways:
  - admin-api-gateway
  http:
  - match:
    - uri:
        prefix: /admin/info
    route:
    - destination:
        port:
          number: 4567
        host: mysql-apiserver
