kubernetes/istio/adminapi-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: adminapi
spec:
  hosts:
    - "*"
  gateways:
    - sectest-gateway
  http:
    - match:
        - uri:
            prefix: /admin/info
      route:
        - destination:
            port:
              number: 9000
            host: mysql-apiserver
