kubernetes/istio/frontend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  tls:
  - secretName: istio-ingress-certs
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 4567
      - path: /data
        backend:
          serviceName: frontend
          servicePort: 4567
